<resources>
    <string name="app_name">EDC</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home_">Home_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="creatAccount" translatable="false"><u>Create Account</u></string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email ID</string>
    <string name="email_hint_signup">Email</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="newsletter">Newsletter</string>
    <string name="payment_instruction">Payment Instructions</string>
    <string name="survey">Survey</string>
    <string name="complaint">Complaint</string>
    <string name="about">About Us</string>
    <string name="settings">Settings</string>
    <string name="contactus">Contact Us</string>
    <string name="news">News</string>
    <string name="logout">LOGOUT</string>
    <string name="login">Sign in</string>
   <!--STUDENT PROFILE-->
    <string name="traffic_number">Traffic No</string>
    <string name="tryfile_number">Try File No</string>
    <string name="branch_number">Branch No</string>
    <string name="branch_name">Branch Name</string>
    <string name="email_student">Email ID</string>

    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="services">Services</string>
    <string name="notifications">Notifications</string>
    <string name="feedback">Feedback</string>
    <string name="signup">Sign Up</string>
    <string name="fullname">Full Name</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="subject">Subject</string>
    <string name="submit">Submit</string>
    <string name="dont_hve_acc">Don\'t have an account? <font fgcolor='#F37021'>Sign Up</font></string>
    <string name="social_media">Social Media</string>
    <string name="enroll">ENROLL</string>
    <string name="enroll_title">Enroll</string>
    <string name="forgot_password"><font fgcolor='#F37021'>Forgot Password?</font></string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="otp_verification_title">OTP Verification</string>
    <string name="forgot_password_message">Enter your email for the verification process.We will send instructions to reset password to your email.</string>
    <string name="otp_verification_message">Enter your email for the verification process.We will send instructions to otp to your email.</string>
    <string name="register">Register</string>
    <string name="payment">Payment</string>

</resources>