<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBF8">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <com.edc.ad.util.CustomTextViewBoldGrey
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Login to \nyour Account"
        android:textSize="28sp"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@+id/clMain"
        app:layout_constraintTop_toBottomOf="@+id/logo" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clEmail"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/roundedbg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.dev.edc.manager.CustomTextViewGrey
                android:id="@+id/emailHintTxt"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:text="@string/email"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.dev.edc.manager.CustomEditTextBlack
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:focusable="true"
                android:hint="@string/email_hint"
                android:inputType="textWebEmailAddress"
                android:paddingLeft="10dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailHintTxt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clPasword"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedbg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clEmail">

            <com.dev.edc.manager.CustomTextViewGrey
                android:id="@+id/passwordHintTxt"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:text="@string/password"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.dev.edc.manager.CustomEditTextBlack
                android:id="@+id/edtPassword"

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:hint="@string/password_hint"
                android:inputType="textWebPassword"
                android:paddingLeft="10dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordHintTxt" />

            <!--            <ImageView-->
            <!--                android:id="@+id/passwordHideShowImg"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="0dp"-->
            <!--                android:padding="10dp"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent"-->
            <!--                app:srcCompat="@drawable/previewicon" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.dev.edc.manager.CustomButtonWhite
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/curved_rectangle"
            android:enabled="false"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@+id/clPasword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/dont_hve_acc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>