<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLYT"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaseActivities.HomeBaseUserActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/home_nav_user" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FAF9F6">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!--
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:background="#E7EEFD">

                            <ImageView
                                android:id="@+id/shapeableImageView"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:layout_marginStart="16dp"
                                android:scaleType="centerCrop"
                                android:background="@drawable/logo"
                                android:alpha=".10"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <com.edc.ad.util.CustomTextViewBoldBlack
                                android:id="@+id/txtUserName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="8dp"
                                android:text="@string/nav_header_title"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                tools:ignore="MissingConstraints" />

                            <com.edc.ad.util.CustomTextViewBoldBlack
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nav_header_subtitle"
                                tools:ignore="MissingConstraints" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
            -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/edc_orange"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView27"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/login_logo" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:src="@drawable/logo_white" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/homeBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|start">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/home_new"
                    android:visibility="visible" />

                <com.edc.ad.util.CustomTextViewBlack
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/home" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/newsLttrBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|start"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"

                    android:src="@drawable/newsletter_new" />

                <com.edc.ad.util.CustomTextViewBlack
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/newsletter" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/newsBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|start"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/news_new"
                    android:visibility="visible" />

                <com.edc.ad.util.CustomTextViewBlack
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/news" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/notificationBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|start"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/notifications_new"
                    android:visibility="visible" />

                <com.edc.ad.util.CustomTextViewBlack
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/notifications" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/servicesBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|start"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/services_new"
                    android:visibility="visible" />

                <com.edc.ad.util.CustomTextViewBlack
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/services" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/surveyBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|start">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_survey"
                    android:visibility="visible" />

                <com.edc.ad.util.CustomTextViewBlack
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/survey" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/complaintBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|start">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/complaint_new"
                    android:visibility="visible" />

                <com.edc.ad.util.CustomTextViewBlack
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/complaint" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/feedbackBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|start">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/feedback_new"
                    android:visibility="visible" />

                <com.edc.ad.util.CustomTextViewBlack
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/feedback" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/paymentInstructionBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone"
                android:gravity="center|start">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_feedback"
                    android:visibility="visible" />

                <com.edc.ad.util.CustomTextViewBlack
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/payment_instruction" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/contactBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|start"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/contactus_new"
                    android:visibility="visible" />

                <com.edc.ad.util.CustomTextViewBlack
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/contactus" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/aboutBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|start">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/about_new" />

                <com.edc.ad.util.CustomTextViewBlack
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/about" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>