<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBF8"
    tools:context=".activity.SignupActivity">

    <ImageView
        android:id="@+id/city1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/car_bg" />

    <ImageView
        android:id="@+id/city2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/city1"
        app:srcCompat="@drawable/car_bg" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:visibility="gone"
        android:background="#C4C4C4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_black" />

    <com.edc.ad.util.CustomTextViewBoldBlack
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="Create your \nAccount"
        android:textColor="@color/black"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideTop" />

    <com.dev.edc.manager.CustomEditTextBlack
        android:id="@+id/editname"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedbg"
        android:hint="@string/fullname"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:visibility="gone"
        android:background="#C4C4C4"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.dev.edc.manager.CustomButtonWhite
        android:id="@+id/submitBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/curved_rectangle"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="@+id/editConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/editConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editConfirmPassword" />


    <ImageView
        android:id="@+id/car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/city1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.90"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/car" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".70" />

    <com.dev.edc.manager.CustomEditTextBlack
        android:id="@+id/editConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedbg"
        android:ems="10"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="@+id/editname"
        app:layout_constraintStart_toStartOf="@+id/editname"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <com.dev.edc.manager.CustomEditTextBlack
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedbg"
        android:ems="10"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="@+id/editConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/editConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <com.dev.edc.manager.CustomEditTextBlack
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundedbg"
        android:ems="10"
        android:hint="@string/email_hint_signup"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editname" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>

    <!--studentID  trafficNumber   tryFileNo -->